# uncertain-racecar-gym

./: .gitignore  PLAN.md  README.md  UNCERTAINTY_TECHNICAL_README.md  pyproject.toml
tests/: test_benchmark.py  test_blender_render.py  test_dataset.py  test_env.py  test_jax_env.py  test_mppi_controllers.py  test_ppo_train.py  test_rendering.py  test_replay_eval.py  test_track.py
third_party_assets/: f1_car.blend
uncertain_racecar_gym/: __init__.py  analysis.py  benchmark.py  blender_render.py  calibration.py  cli.py  common.py  controllers.py  dataset.py  deterministic.py  dynamics.py  env.py  features.py  jax_env.py  mppi_support.py  ppo_train.py  registration.py  rendering.py  replay.py  replay_eval.py  scenario.py  track.py  track_builder.py  uncertainty.py
uncertain_racecar_gym/assets/benchmarks/: barcelona_nominal_controller_suite.yaml  monza_nominal_controller_suite.yaml
uncertain_racecar_gym/assets/blender/: README.md  render_replay.py
uncertain_racecar_gym/assets/scenarios/: ks_barcelona_layout_gp_dallara_f317.yaml  ks_barcelona_layout_gp_dallara_f317_rl_long.yaml  monza_dallara_f317.yaml  sample_oval.yaml
uncertain_racecar_gym/mppi_jax/: __init__.py  controller.py
uncertain_racecar_gym/smooth_mppi_jax/: __init__.py  controller.py
